# ai-remote-dev-base

./: .gitignore  CLAUDE.md  Dockerfile  README.md  entrypoint.sh  pyproject.toml  run.sh  setup-claude-code.sh  setup-terminal.sh  ssh_key_setup.sh  tmux.conf
.github/workflows/: docker-build.yml
agentic-rules/: validate-before-submit.mdc
apps/ollama-pod/: README.md  pyproject.toml
apps/ollama-pod/src/ollama_pod/: cli.py  config.py  gpu.py  model_info.py  pod.py
apps/ollama-pod/tests/: test_config.py  test_gpu.py  test_model_info.py  test_pod.py
remote-dev-setup/: Steps.md
